add model added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/catalogue
+spring.datasource.username=purusottam
+spring.datasource.password=Purusottam#1
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+
+#elasticsearch query
+spring.data.elasticsearch.cluster-name=nineleaps-ThinkPad-E490
+spring.data.elasticsearch.properties.transport.tcp.connect_timeout=60s
