--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/catalogue
-spring.datasource.username=purusottam
-spring.datasource.password=Purusottam#1
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_db
+spring.datasource.username=newuser
+spring.datasource.password=Alok@123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
