--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,28 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_db
-spring.datasource.username=newuser
-spring.datasource.password=Alok@123
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/software
+#spring.datasource.username=root
+#spring.datasource.password=Purusottam#1
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#
+#
+##elasticsearch query
+#spring.data.elasticsearch.cluster-name=purusottam-HP-Pavilion-x360-m3-Convertible
+#spring.data.elasticsearch.properties.transport.tcp.connect_timeout=60s
+
+
+
+#Aws RDS instance
+
+spring.datasource.url=jdbc:mysql://devdb.comvb7xlp9ix.ap-south-1.rds.amazonaws.com:3306/software
+spring.datasource.username=admin
+spring.datasource.password=Purusottam#1
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
 #elasticsearch query
-spring.data.elasticsearch.cluster-name=nineleaps-ThinkPad-E490
+spring.data.elasticsearch.cluster-name=purusottam-HP-Pavilion-x360-m3-Convertible
 spring.data.elasticsearch.properties.transport.tcp.connect_timeout=60s
