--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,31 @@
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/software
-#spring.datasource.username=root
-#spring.datasource.password=Purusottam#1
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#
-#
-##elasticsearch query
-#spring.data.elasticsearch.cluster-name=purusottam-HP-Pavilion-x360-m3-Convertible
-#spring.data.elasticsearch.properties.transport.tcp.connect_timeout=60s
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+spring.datasource.username= postgres
+spring.datasource.password= Purusottam#1
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#elasticsearch query
+spring.data.elasticsearch.cluster-name=LT193-PURUSOTTA
+spring.data.elasticsearch.properties.transport.tcp.connect_timeout=60s
 
 
 
 #Aws RDS instance
 
-spring.datasource.url=jdbc:mysql://devdb.comvb7xlp9ix.ap-south-1.rds.amazonaws.com:3306/software
-spring.datasource.username=admin
-spring.datasource.password=Purusottam#1
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://database-1.cji81ovbayhv.us-east-1.rds.amazonaws.com:3306/test
+#spring.datasource.username=admin
+#spring.datasource.password=Purusottam#1
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
-
-#elasticsearch query
-spring.data.elasticsearch.cluster-name=purusottam-HP-Pavilion-x360-m3-Convertible
-spring.data.elasticsearch.properties.transport.tcp.connect_timeout=60s
+#
+#
+##elasticsearch query
+#spring.data.elasticsearch.cluster-name=LT193-PURUSOTTA
+#spring.data.elasticsearch.properties.transport.tcp.connect_timeout=60s
