--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,22 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
-spring.datasource.username= postgres
-spring.datasource.password= Purusottam#1
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/software?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Purusottam#1
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+#spring.datasource.username= postgres
+#spring.datasource.password= Purusottam#1
+#
+## The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#
+## Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto = update
+#
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #elasticsearch query
 spring.data.elasticsearch.cluster-name=LT193-PURUSOTTA
